--- a/servicio-productos-dev.properties
+++ b/servicio-productos-dev.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://microservicios-mysql8:3306/db_springboot_cloud?serverTimeZone=Americas/Lima
+spring.datasource.url=jdbc:mysql://localhost:3306/db_springboot_cloud?serverTimeZone=Americas/Lima
 spring.datasource.username=root
 spring.datasource.password=
 
