--- a/servicio-usuarios-dev.properties
+++ b/servicio-usuarios-dev.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/db_springboot_cloud
+spring.datasource.url=jdbc:postgresql://microservicios-postgres15:5432/db_springboot_cloud
 spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL95Dialect
